# master

./: .gitignore  build_exe.bat  encoder.pkl  filtered_game_scores.csv  model_totReb.pkl  nba_game_scores.csv  nba_player_props.csv  player_PER_scores.csv  player_scores.csv  player_scores_1228.csv  player_scores_1229.csv  predicted_results_percentiles.csv  predicted_results_summary.csv
6+ Poker/: main.py
AI_Baccarat/: baccarat_prob_sim.py  debug_cards_from_image.py  debug_cards_from_main.py  screen_reader.py  screen_reader_cards.py
AI_Poker/: ai_poker.py  ui_sim.py
Algotrading_Crypto_Alpaca/: .env  ACTUAL_BUY_TRADE_GUIDE.md  COMPLETION_SUMMARY.md  DASHBOARD_INTEGRATION.md  LOGIC_VERIFICATION.md  README.md  README_DASHBOARD.md  START_HERE.md  VISUAL_GUIDE.md  backtest.py  build_exe.ps1  dashboard.py  requirements.txt  tempCodeRunnerFile.py  test_existing_position.py  test_trading.py  trade.py
Algotrading_FX/: algo.py
Betting/: NBA-PAR-LSTM.py  bing_search.py  dynamic_resume.py  read_files.py
CPS_Screener/: collect_all_puts.py  debug_aapl_options.py  filter_from_raw.py  main.py  tempCodeRunnerFile.py
IBKR_Futures/: fx_bot.py
Kraken/: kraken.key  main.py
NBA_Aggregate_Picks/: .gitignore  README.md  debug_oddsshark_dom.py  (+11 more)
nba_sim/: pyproject.toml  visualize_game.py
nba_sim/src/nba_sim/: __init__.py  config.py  court.py  data_loader.py  engine.py  events.py  playbyplay.py  shot_model.py  state.py  viz.py
nba_sim/src/nba_sim/models/: __init__.py  possession_model.py
nba_sim/src/nba_sim/scripts/: __init__.py  run_sim.py
nba_sim/src/scripts/: run_sim.py
(+146 files in other folders)
